test/sema/index-assignment-mismatched-type.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void main() {
    int[3] x = [1,2,3];
    // CHECK: [[@LINE+1]]:12: error: cannot assign 'bool' to 'int'
    x[1] = false;
}
